<resources>
    <string name="app_name">Умный будильник</string>
    <string name="zero" />
    <string name="default_time">00:00</string>
    <string name="ok">готово</string>
    <string name="cancel">отмена</string>
    <string name="alarm_name">имя будильника</string>
    <string name="smart">умный</string>
    <string name="vibrate">вибрация</string>
    <string name="every_day">срабатывать каждый день</string>
    <string name="delete">удалить</string>
    <string name="date">дата</string>
    <string name="time">время </string>
    <string name="time_to_dead">осталось: </string>
    <string name="deadline_name">имя</string>
    <string name="color">цвет</string>
    <string name="name">имя события</string>
    <string name="scroll">добавить элемент</string>
    <string name="wakeup">проснуться</string>
    <string name="action_settings">настройки</string>
    <string name="add_deadline">Добавить задачу</string>
    <string name="add_scroll_element">Добавить элемент</string>
    <string name="repeat_alarm">отложить</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="manual_01">На первой активности приложения возможно добавлять будильник, который может быть ежедневным или “умным”. Функция “умный” будильник подбирает максимально комфортное время сна для пробуждения, которое рассчитывается по специальному алгоритму (Главное, после установки будильника сразу ложиться спать, иначе алгоритм будет работать не коректно) </string>
    <string name="manual_02">В приложении умный будильник реализована функция напоминаний или событий.Здесь возможно добавлять перечень элементов кнопкой “+”, которая находится внутри диалогового окна. </string>
    <string name="manual_03">В настройках вы можете выбрать: рингтон, который будет играть при срабатывании будильника,время, на которое будильник будет отложен при нажатии кнопки “отложить будильник”Так же вы можете выбрать, за сколько предупредить о событии.</string>
</resources>