<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deadline_name"
        android:textAlignment="center"
        android:textSize="40dp"
        android:id="@+id/editName"
        android:background="@color/empty"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp" />

            <TextView
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp" />

        </LinearLayout>

        <Button
            android:text="@string/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addScroll"
            android:layout_weight="1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/taskList">
            </android.support.v7.widget.RecyclerView>
        </ScrollView>

        <Button
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deadlinesDeleteBtn"
            android:layout_weight="1" />

        <Button
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deadlinesApplyBtn"
            android:layout_weight="1"
            />
    </LinearLayout>


</LinearLayout>
