<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/alarm_background"
    android:orientation="vertical"
    android:paddingTop="40sp">

    <TextView
        android:text="@string/default_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsTime"
        android:textSize="50dp"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editAlarmName"
        android:hint="@string/alarm_name"
        android:textAlignment="center"
        android:ems="10"
        android:textSize="24dp"
        android:theme="@style/MyEditText2"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_backgroung">

        <CheckBox
            android:text="@string/smart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dialog_text_color"
            android:theme="@style/MyCheckBox"
            android:id="@+id/smartBtn" />

        <CheckBox
            android:text="@string/every_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"
            android:textColor="@color/dialog_text_color"
            android:id="@+id/everyDay" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteAlarmBtn"
                    android:layout_weight="1"
                    android:textColor="@color/dialog_button_color"
                    android:background="@android:color/transparent" />

                <Button
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/applySettingsBtn"
                    android:layout_weight="1"
                    android:textColor="@color/dialog_button_color"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
