<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:paddingBottom="2dp">

    <LinearLayout
        android:id="@+id/leftLayout"
        android:layout_width="7sp"
        android:layout_height="match_parent"
        android:background="#AB47BC"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/rightLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a4ba68c8"
        android:orientation="vertical"
        android:padding="2dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/alarm_background"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textColor="@color/alarm_background"
                android:textSize="35dp" />

            <Button
                android:id="@+id/settingsBtn"
                android:layout_width="50sp"
                android:layout_height="45sp"
                android:layout_gravity="bottom"
                android:background="@drawable/burgermenu"
                android:text="@string/zero" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
